<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GeoTagActivity"
    android:background="@drawable/underwater">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text = "@string/splashScreen"
        android:id = "@+id/splash"
        android:onClick="Splash"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu"
        android:id="@+id/mainMenu"
        android:layout_below="@+id/splash"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/userProfile"
        android:id="@+id/userProfile"
        android:layout_below="@+id/mainMenu"
        android:layout_marginTop="35dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gamePlay"
        android:id="@+id/gamePlay"
        android:layout_below="@+id/userProfile"
        android:layout_marginTop="35dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/helpScreen"
        android:id="@+id/helpScreen"
        android:layout_below="@+id/gamePlay"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:id="@+id/loginScreen"
        android:layout_below="@+id/helpScreen"
        android:layout_marginTop="35dp" />

</RelativeLayout>
