<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.rasmussen.mobile.project06.SubmitActivity"
    android:background="@drawable/underwater">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Please Fill In The Fields\nThen Hit Submit To Save"
        android:id="@+id/instructionsDescBox"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="#c0c0c0"
        android:gravity="center"
        android:textColor="#010101" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:layout_marginTop="15dp"
        android:id="@+id/inputDescBox"
        android:layout_below="@+id/instructionsDescBox"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:gravity="center"
        android:backgroundTint="#64ffffff"
        android:textColor="#010101"
        android:hint="@string/descriptionInstructionsText"
        android:maxLines="2"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:layout_marginTop="15dp"
        android:id="@+id/inputAddressBox"
        android:layout_below="@+id/inputDescBox"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:gravity="center"
        android:backgroundTint="#64ffffff"
        android:textColor="#010101"
        android:hint="@string/streetInstructionsText"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:layout_marginTop="15dp"
        android:id="@+id/inputCityBox"
        android:layout_below="@+id/inputAddressBox"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:gravity="center"
        android:backgroundTint="#64ffffff"
        android:textColor="#010101"
        android:hint="@string/cityInstructionsText"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:layout_marginTop="15dp"
        android:id="@+id/inputStateBox"
        android:layout_below="@+id/inputCityBox"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:gravity="center"
        android:backgroundTint="#64ffffff"
        android:textColor="#010101"
        android:hint="@string/stateInstructionsText"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:layout_marginTop="15dp"
        android:id="@+id/inputZipCodeBox"
        android:layout_below="@+id/inputStateBox"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:gravity="center"
        android:backgroundTint="#64ffffff"
        android:textColor="#010101"
        android:hint="@string/zipInstructionsText"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitButtonText"
        android:id="@+id/submitButton"
        android:layout_below="@+id/inputZipCodeBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

</RelativeLayout>
